manifests/system/02-longhorn/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.56.0/24,192.168.57.0/24,192.168.59.0/24"
spec:
  rules:
    - host: longhorn.codekernel.co.uk
      http:
        paths:
          - backend:
              service:
                port:
                  number: 80
                name: longhorn-frontend
            path: /
            pathType: Prefix
  tls:
  - hosts:
    - longhorn.codekernel.co.uk
